--- a/landing.html
+++ b/landing.html
@@ -2,73 +2,184 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="stylesheet" href="landingpage.css" />
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content=
+		"width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<title>Landing Page</title>
 </head>
 
 <body>
-    <!-- header section starts  -->
+	<nav>
+		<div class="heading">Landing Page</div>
+		<span class="sideMenuButton"
+			onclick="openNavbar()">
+			☰
+		</span>
 
-    <header>
-        <section class="nav">
-            <!-- We can also insert any logo here     -->
+		<div class="navbar">
+			<ul>
+				<li><a href="#Home">Home</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Sign Up</a></li>
+			</ul>
+		</div>
+	</nav>
 
-            <!-- We can also insert any logo here     -->
-            <div class="logo">
-                <a href="#"><i class="fas fa-utensils"></i>food</a>
-            </div>
+	<!-- Side navigation bar for
+		responsive website -->
+	<div class="sideNavigationBar"
+		id="sideNavigationBar">
+		<a href="#" class="closeButton"
+			onclick="closeNavbar()">
+			
+		</a>
+		<a href="#">Home</a>
+		<a href="#">About</a>
+		<a href="#">Sign Up</a>
+	</div>
 
-            <!--  checkbox to control the icon's state    -->
-            <input id="menu-toggle" type="checkbox" />
-            <label class="menu-button-container" for="menu-toggle">
-          <div class="menu-button"></div>
-        </label>
-            <!--  main menu    -->
-            <ul class="menu">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#speciality">About</a></li>
-                <li><a href="#popular">Popular</a></li>
-                <li><a href="#review">Contact</a></li>
-                <li><a href="#order" class="order">Menu</a></li>
-            </ul>
-        </section>
-    </header>
+	<!-- Content -->
+	<div class="line" id="Home">
+		<div class="side1">
+			<h1>WebDev</h1>
+			<button>
+				<a href=
+"https://www.geeksforgeeks.org/">
+					Explore More
+				</a>
+			</button>
+		</div>
+		<div class="side2">
+			<img src=
+"img.png"
+				width="500">
+		</div>
+	</div>
 
-    <!-- header section ends -->
+	<section class="about" id="My Projects">
+		<div class="content">
+			<div class="title">
+				<span>Courses</span>
+			</div>
+			<div class="boxes">
+				<div class="box">
+					<div class="topic">
+						<a href="" target="_blank">
+							DSA
+						</a>
+					</div>
+					<p>
+						The term DSA stands for Data
+						Structures and Algorithms. As
+						the name itself suggests, it
+						is a combination of two
+						separate yet interrelated
+						topics.
+					</p>
+				</div>
+				<div class="box">
 
-    <!-- hero section starts  -->
+					<div class="topic">
+						<a href="" target="_blank">
+							HTML
+						</a>
+					</div>
+					<p>
+						HTML stands for HyperText
+						Markup Language. It is used
+						to design web pages using
+						the markup language.
+					</p>
+				</div>
 
-    <section class="home" id="home ">
-        <div class="content">
-            <!-- Tagline -->
-            <h3 class="mainfont">
-                The Ch<span class="yellowColor">ee</span>se Decker
-            </h3>
-            <h3>
-                fastest f<span class="yellowColor">oo</span>d for , instant
-                <span class="yellowColor">Hunger</span>
-            </h3>
-            <!--Description  -->
-            <p>
-                Fast food is popular because the food is inexpensive, convenient, and tastes good. Fast food may include refined grains instead of whole grains, contain saturated fat, cholesterol, and added sugar, and it can be high in sodium (aka salt) which is used as a preservative and makes food more flavorful and satisfying.!
-            </p>
+				<div class="box">
+					<div class="topic">
+						<a href="" target="_blank">
+							Javascript
+						</a>
+					</div>
+					<p>
+						JavaScript (JS) is the most
+						popular lightweight, interpreted
+						compiled programming language.
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
 
-            <!-- CTA -->
-            <a href="# " class="btn">ORDER NOW</a>
-        </div>
-        <!-- Hero image -->
-
-        <div class="image">
-            <img src="https://w7.pngwing.com/pngs/315/715/png-transparent-burger-with-ham-and-cheese-hamburger-bacon-sushi-pizza-cheeseburger-burger-king-food-recipe-cheese-thumbnail.png" alt=" " />
-        </div>
-    </section>
-
-    <!-- hero section ends   -->
+	<section class="contact" id="contact">
+		<div class="content">
+			<div class="title"><span>Sign Up</span></div>
+			<div class="contactMenu">
+				<div class="input1">
+					<div class="label1">Your Name</div>
+					<div class="input2">
+						<input type="text"
+							placeholder="Enter your Name here">
+					</div>
+					<div class="label1">
+						<label>Your Email</label>
+					</div>
+					<div class="input2">
+						<input type="text"
+							placeholder="Enter your Email here">
+					</div>
+					<div class="label1">
+						<label>Your Password</label>
+					</div>
+					<div class="input2">
+						<input type="text"
+							placeholder="Enter your Password here">
+					</div>
+					<div class="button">
+						<button>Sign Up</button>
+					</div>
+				</div>
+				<div class="input3">
+					<div class="rightside1">
+						<div class="title1">
+							<span>
+								Contact Us
+							</span>
+						</div>
+						<div class="content1">
+							Andhra Pradesh,India
+						</div>
+						<div class="title1">
+							<span>More Information</span>
+						</div>
+						<div class="content1">
+							Greetings to all the Geeks out there!
+							We welcome you to the platform where we
+							consistently strive to offer the best
+							of education. This platform has been
+							designed for every geek wishing to
+							expand their knowledge, share their
+							knowledge and is ready to grab their
+							dream job.Thank you for choosing
+							and supporting us!
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!-- Footer section -->
+	<footer>
+		<div class="footer">
+			<span>
+				Created By
+				<a href="https://www.geeksforgeeks.org/"
+					target="_blank">
+					Soumya
+				</a>
+			</span>
+		</div>
+	</footer>
+	<script src="index.js"></script>
 </body>
 
 </html>
